--- a/public/index.css
+++ b/public/index.css
@@ -19,7 +19,7 @@
 .header__player {
     display: flex;
     background-repeat: no-repeat;
-    width: 47vw;
+    width: 49vw;
     height: 60px;
 }
 
@@ -66,7 +66,6 @@
 }
 
 .hot {
-    // background: #00ff90;
     width: 75vw;
     height: 100vh;
     margin-left: auto;
@@ -89,14 +88,16 @@
 .topic__header {
     text-align: center;
     margin-bottom: 15px;
+    width: 20%;
+    margin-left: 40%;
 }
 
 .red-underline {
     background: #b90000;
     content: "";
     height: 3px;
-    margin-left: 48%;
-    width: 50px;
+    margin-left: 40%;
+    width: 20%;
 }
 
 
@@ -110,21 +111,19 @@
 
 
 .popular-tracks {
-    // background: #fb5050;
     width: 75vw;
-    height: 100vh;
+    height: 50vh;
     margin-left: auto;
     margin-right: auto;
     margin-top: 5vh;
     padding: 2vh;
     display: flex;
     flex-wrap: wrap;
-    align-content: space-between;
+    align-content: flex-start;
     flex-direction: row;
 }
 
 .track-card {
-    // background: #ffa200;
     margin: 1vh;
     width: 23vw;
     height: 80px;
@@ -269,6 +268,33 @@
     align-content: center;
 }
 
+.item-list__artists {
+    height: 50vh;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    width: 100%;
+}
+
+.item-list__albums {
+    height: 50vh;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    width: 100%;
+}
+
+.image-card{
+    width: 25%;
+}
+
+.image-card-img{
+    height: 150px;
+    width: 150px;
+}
+
 .item-list__cell {
     display: flex;
     flex-direction: column;
@@ -287,7 +313,6 @@
 .item-list--more-button {
     text-align: end;
     width: 100%;
-    // background: #ffa200;
     margin-top: 1%;
     color: #005399;
 }
@@ -306,8 +331,8 @@
     display: flex;
     height: 6vh;
     align-items: center;
-    justify-content: space-between;
     padding-bottom: 1%;
+    justify-content: space-between;
 }
 
 .artist-card--description {
@@ -316,23 +341,26 @@
 
 .track-list--play-image {
     height: auto;
-    width: auto;
+    width: 3%;
+    text-align: start;
 }
 
 .track-list--image {
-    height: 100%;
-    width: 6vh;
+    width: 100%;
+    height: auto;
 }
 
 .track-list--like-image {
-    height: 50%;
-    width: 3vh;
+    width: 4%;
+    height: auto;
 }
 
 .track-list--track-link {
+    width: 40%;
 }
 
 .track-list--artist-link {
+    width: 25%;
 }
 
 .track-list--time {
@@ -386,4 +414,23 @@
 
 .search-body__type__item {
     margin-right: 2%;
+}
+
+.card-genre-item{
+display: inline;
+margin-right: 4px;
+}
+
+.card-genre-item, .card-genre-item-link {
+    font-size: 11px;
+    font-weight: 500;
+}
+
+.text-black:hover {
+    text-decoration: underline;
+}
+
+.text-black{
+    color:#000000;
+    text-decoration: none;
 }
